# wildfire-oregon-project

./: .gitattributes  .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: livescan.yml  pages.yml  update.yml
configs/: config.yaml
docs/: data_sources.md  earth_engine_setup.md  github_deploy_setup.md  literature.md
notebooks/: 01_data_exploration.ipynb  02_features_and_imbalance.ipynb  03_modeling_and_validation.ipynb  04_maps_and_detection.ipynb
scripts/: 00_check_earth_engine.py  01_ingest.py  02_features.py  03_patches.py  04_train_tabular.py  05_train_cnn.py  06_evaluate.py  07_visualize.py  08_tune.py  build_site.py  live_fire_scan.py  run_pipeline.py  verify_predictions.py
site/: README.md  app.js  index.html  paper.js  style.css
site/data/: cells.js  live_scan.js  live_scan.json  meta.js  predictions.js  predictions.json
src/wildfire/: __init__.py  cli.py  config.py  feature_labels.py  utils.py
src/wildfire/eval/: __init__.py  cv.py  fire_danger.py  metrics.py  runner.py  shap_explain.py
src/wildfire/features/: __init__.py  build.py  grid.py  regions.py  sampling.py
src/wildfire/ingest/: __init__.py  boundary.py  datasets.py  districts.py  earth_engine.py  ecoregions.py  ee_auth.py  firms.py  nifc.py  osm.py  patches.py  synthetic.py
src/wildfire/models/: __init__.py  baselines.py  cnn.py  count.py  detector.py  risk.py  tune.py
src/wildfire/viz/: __init__.py  maps.py
tests/: test_core.py  test_features.py
