[project]
name = "wildfire-oregon"
version = "0.1.0"
description = "Oregon Wildfire ML System — risk heatmap, fire-count prediction, and satellite fire detection."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Oregon Wildfire ML Project" }]

# Core dependencies — needed for ingest, features, the tree models, eval, and viz.
# The deep-learning CNN deps live in the optional [cnn] extra (large CUDA download).
dependencies = [
    # --- scientific core ---
    "numpy>=1.26,<2.0",
    "pandas>=2.0,<2.3",
    "pyarrow>=15.0",         # parquet I/O for canonical tables
    "scipy>=1.11",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "joblib>=1.3",
    "python-dotenv>=1.0",
    # --- tabular ML ---
    "scikit-learn>=1.4,<1.6",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "statsmodels>=0.14",      # Poisson / negative-binomial GLMs for fire-count model
    "optuna>=3.6",
    "shap>=0.45",
    # --- geospatial ---
    "geopandas>=0.14,<1.1",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "h3>=4.0",               # H3 hex spatial grid
    # --- Earth Engine ---
    "earthengine-api>=1.0",
    "geemap>=0.32",
    # --- second source / proxies ---
    "requests>=2.31",
    "osmnx>=1.9",            # OSM roads / power-line human-ignition proxies
    # --- viz ---
    "matplotlib>=3.8",
    "folium>=0.16",
    "contextily>=1.6",      # basemaps for static high-res maps
    "branca>=0.7",
]

[project.optional-dependencies]
# Fire-detection CNN. Install with:  uv sync --extra cnn
# Pulls the CUDA build of torch from the pytorch index configured below.
cnn = [
    "torch>=2.2",
    "torchvision>=0.17",
    "pillow>=10.0",
    "timm>=1.0",            # pretrained EfficientNet / ResNet backbones
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
# Convenience CLI entry points (see src/wildfire/cli.py)
wildfire = "wildfire.cli:main"

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------
[tool.uv]
# Keep the big CUDA torch wheels out of the default resolution; opt in via --extra cnn.
default-groups = ["dev"]

# PyTorch CUDA wheels are served from a dedicated index, not PyPI.
# cu121 is chosen for broad driver compatibility (NVIDIA driver >= 527).
# To switch: change the URL below to cu124 (driver >= 550) or cpu, and re-run uv sync.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

# ---------------------------------------------------------------------------
# Build / packaging
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wildfire"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
